--- a/.github/workflows/tf-workflow.yml
+++ b/.github/workflows/tf-workflow.yml
@@ -21,7 +21,7 @@ jobs:
       TF_VAR_client_id: ${{ secrets.ARM_CLIENT_ID }}
       TF_VAR_client_secret: ${{ secrets.ARM_CLIENT_SECRET }}
       TF_VAR_tenant_id: ${{ secrets.ARM_TENANT_ID }}
-      TF_VAR_subscription_id: ${{ vars.ARM_SUBSCRIPTION_ID }}
+      TF_VAR_subscription_id: ${{ secrets.ARM_SUBSCRIPTION_ID }}
       TF_VAR_vm_password: ${{ secrets.TF_VM_PASSWORD }}
 
     # Steps represent a sequence of tasks that will be executed as part of the job
