--- a/.github/workflows/tf-workflow.yml
+++ b/.github/workflows/tf-workflow.yml
@@ -22,7 +22,7 @@ jobs:
       TF_VAR_client_secret: ${{ secrets.ARM_CLIENT_SECRET }}
       TF_VAR_tenant_id: ${{ secrets.ARM_TENANT_ID }}
       TF_VAR_subscription_id: ${{ secrets.ARM_SUBSCRIPTION_ID }}
-      TF_VAR_vm_password: ${{ secrets.TF_VM_PASSWORD }}
+      TF_VAR_vm_password: ${{ secrets.VM_PASSWORD }}
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
