--- a/.github/workflows/tf-workflow.yml
+++ b/.github/workflows/tf-workflow.yml
@@ -1,6 +1,6 @@
 # This is a basic workflow to help you get started with Actions
 
-name: TERRAFORM WORKFLOW - Final Project
+name: Terraform Workflow
 
 # Controls when the workflow will run
 on:
@@ -42,3 +42,6 @@ jobs:
 
       - name: terraform-apply
         run: terraform apply -auto-approve
+
+        - name: terraform-destroy
+        run: terraform destroy -auto-approve
